Add very bare bones ID normalizer module

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = "Unified toolkit for multiomics data harmonization"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "pyyaml>=6.0.3",
+    "requests>=2.32.5",
+]
 
 [build-system]
 requires = ["hatchling"]
