--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,14 +5,17 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.10', '3.12']
 
     steps:
     - uses: actions/checkout@v5
 
-    - name: Set up Python
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v6
       with:
-        python-version: '3.12'
+        python-version: ${{ matrix.python-version }}
 
     - name: Install uv
       run: curl -LsSf https://astral.sh/uv/install.sh | sh
