--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "numpy>=2.2.6",
     "pandas>=2.3.3",
     "pyyaml>=6.0.3",
+    "rdkit>=2025.9.1",
     "requests>=2.32.5",
 ]
 
