--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,16 +20,31 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["src/biomapper2"]
 
-[tool.black]
-line-length = 120
-
 [dependency-groups]
 dev = [
     "black>=25.11.0",
-    "mypy>=1.18.2",
     "pandas-stubs>=2.3.2.250926",
     "pyright>=1.1.407",
     "pytest>=8.4.2",
+    "ruff>=0.14.6",
     "types-pyyaml>=6.0.12.20250915",
     "types-requests>=2.32.4.20250913",
 ]
+
+[tool.black]
+line-length = 120
+
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
+select = [
+    "E",   # pycodestyle errors (PEP 8 style issues)
+    "F",   # pyflakes (undefined names, unused imports, etc.)
+    "I",   # isort (import sorting)
+    "W",   # pycodestyle warnings
+    "UP",  # pyupgrade (modernize Python syntax like old-style type hints)
+]
+
+[tool.ruff.lint.isort]
+known-first-party = ["biomapper2"]
