--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,14 @@ description = "Unified toolkit for multiomics data harmonization"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "matplotlib>=3.10.8",
     "numpy>=2.2.6",
     "pandas>=2.3.3",
     "python-dotenv>=1.2.1",
     "pyyaml>=6.0.3",
     "rdkit>=2025.9.1",
     "requests>=2.32.5",
+    "seaborn>=0.13.2",
 ]
 
 [build-system]
